# GammaTrade

./: .gitignore  Doxyfile  README.md  gamma-trade.yaml
Client/: package-lock.json  package.json
Client/src/: App.js  index.css  index.js
Server/: CMakeList.txt  CMakeLists.txt  Dockerfile
Server/api/: api.py  pybind.cpp
Server/include/: accont.hpp  account.hpp  gammaTrade.hpp  item.hpp  stock.hpp
Server/src/: account.cpp  gammaTrade.cpp  stock.cpp
Server/test/: git_test.cpp  test.cpp
docs/Implementation Details/: implementation_details.drawio
docs/html/: CMakeCXXCompilerId_8cpp.html  account_8cpp.html  account_8cpp__incl.dot  account_8hpp.html  account_8hpp__dep__incl.dot  account_8hpp__incl.dot  account_8hpp_source.html  annotated.html  classAccount.html  classGammaTrade-members.html  classGammaTrade.html  classStock-members.html  classStock.html  classes.html  dir_000000_000005.html  dir_000006_000005.html  dir_000007_000005.html  dir_000007_000006.html  dir_0188a3e6da905bc60aceb35bf790b8c9.html  dir_0188a3e6da905bc60aceb35bf790b8c9_dep.dot  dir_0b710d37b9ad81b1cabd613e98df68ed.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a_dep.dot  dir_1a445cb237d74f7a5f8d11ec3b0585cc_dep.dot  dir_1b7dd5e85b1491356c17f0353c28a9eb.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_50964e6576c4ef2cb08611eea10c8e69.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  (+26 more)
html/: account_8hpp_source.html  classAccount-members.html  classGammaTrade-members.html  dir_000001_000006.html  dir_1a445cb237d74f7a5f8d11ec3b0585cc.html  dir_30ff900869959b17197a70705703ad2d.html  dir_50964e6576c4ef2cb08611eea10c8e69_dep.dot  dir_91445b934ec3b4b9c264c209426228af.html  dir_c92fb000628938b537e8d611bbf9d4af.html  dir_e21a975877c3b6a07268dea683df1add_dep.dot  dir_efd4e50cb29847227b95d16efbc674e4.html  functions_func.html  gammaTrade_8hpp__dep__incl.dot  gammaTrade_8hpp__incl.dot  globals.html  stock_8cpp.html  stock_8hpp__dep__incl.dot  stock_8hpp__incl.dot
(+79 files in other folders)
